# advanced-brainfuck

./: .gitignore  .travis.yml  CHANGELOG.md  README.md  brainfuck.py  conftest.py  examples.txt  how-to-use.md  proj-spec.txt  pyproject.toml
.github/workflows/: pypi-publish.yml
bflib/: and.bf  copy.bf  eq.bf  if.bf  lower.bf  m10.bf  m100.bf  m50.bf  mul2.bf  muln.bf  not.bf  or.bf  p10.bf  p100.bf  p5.bf  p50.bf  p65.bf  sqrt.bf  sub.bf  sum.bf  swap.bf  tochar.bf  toint.bf  upper.bf
brainfuck/: __init__.py  __main__.py  core.py
brainfuck/bflib/: copy.bf  div.bf  lower.bf  m100.bf  mod.bf  move.bf  mul.bf  mul2.bf  newline.bf  p10.bf  p32.bf  p48.bf  p50.bf  sub.bf  toint.bf  zero.bf
docs/: index.html
docs/adr/: ADR_20260502_ir_compilation.md  ADR_20260502_jit_acceleration.md  ADR_20260503_segmented_jit.md
docs/branding/: branding.md
docs/features/: core-interpreter.feature  jit-acceleration.feature  library-imports.feature
docs/interview-notes/: IN_20260502_requirements.md
docs/research/: brainfuck_performance.md
docs/spec/: context_map.md  domain_model.md  glossary.md  product_definition.md  system.md  technical_design.md
libs/: sub.bf
tests/features/cli-flags/: cli_test.py
tests/features/core-interpreter/: basic_commands_test.py
tests/features/jit-acceleration/: execution_test.py
tests/features/library-imports/: import_resolution_test.py
tests/unit/: test_ir_and_cells.py  test_persistence_and_wrapping.py
