[project]
name = "advanced-brainfuck"
version = "2.0.0"
description = "High-performance Brainfuck interpreter with JIT acceleration, library imports, and interactive REPL"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numba>=0.58.0",
    "numpy>=1.24.0",
]

[project.scripts]
brainfuck = "brainfuck:main"

[dependency-groups]
dev = [
    "agents-smith>=1.0.0",
    "pytest>=9.0.3",
]
